# task_manager

./: Cargo.toml  README.md  cspell.json
src/: main.rs
src/commands/: constants.rs  functions.rs  mod.rs
src/commands/__tests__/: calculate_task_time.rs  mod.rs
src/data/: status.rs  task.rs
src/utils/: input.rs  mod.rs  storage.rs  table.rs
