[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
